Clipboard is cleared after any DND move
Affected version
- Nightly flatpak: Yes
- Likely all versions since 2.24
Steps to reproduce
- Copy file "A" to the clipboard (using CtrlC, for instance).
- Move file "B" to another folder by drag-and-drop.
- Paste (using CtrlV, for instance).
Current behavior
Nothing happens. Yet, the Paste action in the menu shows as sensible.
Expected behavior
A copy of file "A" is created at the destination (i.e., pasting works).
Additional information
This happens since commit 3befbe34, which fixed https://bugzilla.gnome.org/show_bug.cgi?id=532850.
It should only clear the clipboard if a file being moved was in the clipboard. But due to a mistake in the patch, it does so in all cases.