clipboard: Fix incorrect item URIs collision check

Move-or-copy item callback is supposed to clear nautilus
clipboard in case when items in question were present in the clipboard.
Previously item URI collision check algorithm compared moved (or copied)
items with themselves instead of clipboard contents.

This fix addresses this issue.

https://gitlab.gnome.org/GNOME/nautilus/issues/1235